Thu, 20 Mar 2008 11:09:27 +0100 <thp@perli.net>
Timestamp and benchmark functions for logger

	* src/gpodder/liblogger.py: Add support for timestamping and benchmark
	functions to liblogger, so we see the microtime since gPodder startup
	and can also use the logging module to benchmark the speed of certain
	code parts; this is helpful for our performance patches :)

Thu, 20 Mar 2008 11:07:48 +0100 <thp@perli.net>
Performance-improving patch from Nick (nikosapi) to html entity replacement

	* src/gpodder/util.py: Merge patch from Nick (nikosapi.org) to really
	improve performance of the HTML tag stripper/entity replacement code
	by using regular expressions and some more intelligent code for
	converting numeric entities to Unicode characters

Thu, 20 Mar 2008 11:06:32 +0100 <thp@perli.net>
Add demo code for displaying a splash screen

	* doc/dev/splash-logo.py: Added testing code that would display a
	splash screen (transparent if compositing is enabled); we currently
	don't plan to use this code for reasons described on gpodder-devel

Thu, 20 Mar 2008 10:04:14 +0100 <thp@perli.net>
Filter "None" filenames from GtkFileChooser widgets

	* src/gpodder/config.py: Make sure we don't receive a "None" filename
	from GtkFileChooser widgets when connecting to the config manager

Wed, 19 Mar 2008 18:06:58 +0100 <thp@perli.net>
Change the context menu of the episode list popup menu

	* src/gpodder/gui.py: Simplify, re-structure and improve the context
	menu of the episode list popup menu (right-click menu); thanks to hex
	(justin.forest gmail.com) for suggesting this change and giving
	valuable input on gpodder-devel

Wed, 19 Mar 2008 15:45:15 +0100 <thp@perli.net>
Patch from Nikosapi to fix MP3 player sync progress

	* src/gpodder/sync.py: Patch from Nick (nikosapi.org) to fix MP3
	player sync problems: "Instead of displaying the proper percentage of
	the copied file in the FS-based sync dialog, gPodder would initially